# leela-zero

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CLOUD.md  CMakeLists.txt  COLAB.md  CONTRIBUTING.md  Colab.md  Dockerfile  FAQ.md  FAQ_cn.md  FastState.cpp  FastState.h  FullBoard.h  GTP.h  Leela.cpp  OpenCL.h  README.md  SGFParser.cpp  SGFParser.h  SGFTree.h  SMP.cpp  SMP.h  ThreadPool.h  TimeControl.cpp  Timing.cpp  Timing.h  appveyor.yml  autoenv.sh  gtest.cmake  leela-zero.sln  leela-zero2015.sln  leela-zero2017.sln  requirements.txt  server.py  shell.nix  test_32x1.txt  udpserver.py  zero.prototxt  (+1 more)
Dockerfiles/: Dockerfile.base  Dockerfile.cpu  Dockerfile.cpu-blas  Dockerfile.gpu  Dockerfile.gpu-blas  Dockerfile.gpu-half  Dockerfile.tests  Dockerfile.tests-blas
VS2015/: autogtp.vcxproj  autogtp.vcxproj.filters  leela-zero.vcxproj
VS2017/: autogtp.vcxproj  autogtp.vcxproj.filters  leela-zero.vcxproj
autogtp/: .gitignore  CMakeLists.txt  Console.h  Distributedval.cpp  Distributedval.h  Game.cpp  Game.h  Job.cpp  Job.h  Keypress.cpp  Keypress.h  Management.cpp  Management.h  Managment.cpp  Managment.h  Order.cpp  Order.h  Production.cpp  Production.h  README.md  Result.h  Results.cpp  Results.h  SPRT.cpp  SPRT.h  Validation.cpp  Validation.h  Worker.cpp  Worker.h  autogtp.pro  main.cpp  production.cpp  production.h  sprt.cpp  sprt.h  validation.cpp  validation.h
autotf/: main.py
cmake/Modules/: FindReadline.cmake
ipc/: A.py  B.py  nn.py  requirements.txt  server.py  test_client.py
msvc/: .gitignore  leela-zero2015.sln  leela-zero2017.sln
msvc/VS2015/: autogtp.vcxproj  autogtp.vcxproj.filters  cmake_build.bat  leela-zero.vcxproj  leela-zero.vcxproj.filters  packages.config
msvc/VS2017/: autogtp.vcxproj  autogtp.vcxproj.filters  cmake_build.bat  leela-zero.vcxproj  leela-zero.vcxproj.filters  packages.config
msvc/autogtp/: autogtp.vcxproj  autogtp.vcxproj.filters
resign_analysis/: resign_analysis.py
scripts/: convert_v1_v3.py  cpplint.py
scripts/resign_analysis/: resign_analysis.py
scripts/training_analysis/: training_analysis.py
src/: CPUPipe.cpp  CPUPipe.h  Eliza.cpp  Eliza.h  FastBoard.cpp  FastBoard.h  FastBoardSerializer.cpp  FastBoardSerializer.h  FastState.cpp  FastState.h  ForwardPipe.h  FullBoard.cpp  FullBoard.h  GTP.cpp  GTP.h  GameState.cpp  GameState.h  Im2Col.h  KoState.cpp  KoState.h  Leela.cpp  Makefile  NNCache.cpp  NNCache.h  Netresult.h  Network.cpp  Network.h  OpenCL.cpp  OpenCL.h  OpenCLScheduler.cpp  OpenCLScheduler.h  Random.cpp  Random.h  SGFParser.cpp  SGFParser.h  SGFTree.cpp  SGFTree.h  SMP.cpp  SMP.h  TTable.cpp  (+30 more)
src/CL/: cl2.hpp
src/clblast_level3/: common.opencl  level3.opencl  xgemm_batched.opencl  xgemm_direct_batched.opencl  xgemm_direct_part1.opencl  xgemm_direct_part2.opencl  xgemm_direct_part3.opencl  xgemm_part1.opencl  xgemm_part2.opencl  xgemm_part3.opencl  xgemm_part4.opencl
src/clblast_level3_half/: xgemm_part1.opencl  xgemm_part2.opencl
src/half/: half.hpp
src/kernels/: apply_se.opencl  common.opencl  convolve1.opencl  convolve3.opencl  opencl_to_cuda.h  pooling.opencl  tensorcore_test.opencl
src/kernels/clblast/: hgemm_tensorcore.opencl  xgemm_batched.opencl  xgemm_part1.opencl  xgemm_part2.opencl  xgemm_part3.opencl  xgemv.opencl
src/tests/: 0k.txt  FastBoardSerializer_unittest.cpp  FastBoard_unittest.cpp  FullBoard_unittest.cpp  gtests.cpp  sample.cpp  utils_unittest.cpp
training/caffe/: zero.prototxt  zero_nano.prototxt
training/elf/: elf_convert.py
training/minigo/: convert_minigo.py
training/tf/: average_weights.py  chunkparser.py  mixprec.py  net2net.py  net_to_model.py  parse.py  quantize_weights.py  requirements.txt  shufflebuffer.py  tfprocess.py  v2_write_training.py
training/tf/dumper/: mongo_training.py
validation/: .gitignore  CMakeLists.txt  Results.cpp  Results.h  SPRT.cpp  SPRT.h  Validation.cpp  Validation.h  main.cpp  moc_Validation.cpp  validation.pro
